[package]
name = "iftree"
version = "1.0.4"
authors = ["Benjamin Fischer <benjamin.fischer@evolutics.info>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/evolutics/iftree"
repository = "https://github.com/evolutics/iftree"
keywords = ["include", "directory", "folder", "file", "embed"]
categories = ["filesystem", "web-programming"]
description = "Include many files in your Rust code for self-contained binaries"

[lib]
proc-macro = true

[dependencies]
ignore = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0", features = ["default", "extra-traits"] }
toml = "0.8"
unicode-xid = "0.2"

[dev-dependencies]
actix-web = "4.5"
async-std = { version = "1.12", features = ["attributes"] }
handlebars = "5.1"
include-flate = "0.3"
lazy_static = "1.4"
mime_guess = "2.0"
once_cell = "1.19"
regex = "1.10"
rocket = "0.5.0"
sha2 = "0.10"
tempfile = "3.10"
tide = "0.16"
tokio = { version = "1.36", features = ["full"] }
warp = "0.3"
