[package]
name = "iftree"
version = "1.0.6"
edition = "2021"                                                                 # Update-worthy.
description = "Include many files in your Rust code for self-contained binaries"
homepage = "https://github.com/evolutics/iftree"
repository = "https://github.com/evolutics/iftree"
license = "MIT"
keywords = ["directory", "embed", "file", "folder", "include"]
categories = ["filesystem", "web-programming"]

[lib]
proc-macro = true

# Update-worthy.
[dependencies]
ignore = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0", features = ["default", "extra-traits"] }
toml = "0.9"
unicode-xid = "0.2"

# Update-worthy.
[dev-dependencies]
actix-web = "4.9"
async-std = { version = "1.13", features = ["attributes"] }
handlebars = "6.3"
include-flate = "0.3"
mime_guess = "2.0"
regex = "1.11"
rocket = "0.5"
sha2 = "0.10"
tempfile = "3.15"
tide = "0.16"
tokio = { version = "1.42", features = ["full"] }
warp = "0.3"
